@@ -1,32 +1,96 @@
-# DD SetUp
-Check Out the code from 
-https://github.com/ChiranjeeviRaj/DD
+Shopizer 2.3.0 (for java 1.8 +)
+-------------------
 
-Add ssh key for Check in/out the project 
+Java open source e-commerce software
 
-$ > cd DD
-$ > ssh-add -K ./id_rsa
+- Shopping cart
+- Catalogue
+- Search
+- Checkout
+- Administration
+- REST API
 
-Create a My SQL DB account as below
+See the demo:
+-------------------
+http://demo.shopizer.com:8080
 
-SetUP DB:
-Donwolad and install MYSQL.
-Save the temp passoword.
-Login MY SQL using the root and temp password
-Change the MySQL passowrd using the below cmd after login
-ALTER USER 'root'@'localhost' IDENTIFIED BY 'root';
 
-Client : I am using 'Sequel Pro' it is one of the best My SQL Client.
-https://sequelpro.com/download
+To get the code:
+-------------------
+Clone the repository:
+$ git clone git://github.com/shopizer-ecommerce/shopizer.git
 
-Username : root
-Password : root
-DB Name : SALESMANAGER
+If this is your first time using Github, review http://help.github.com to learn the basics.
 
-$ > mvn clean install
-$ > cd sm-shop
-$ > mvn spring-boot:run
+You can also download the zip file containing the code from https://github.com/shopizer-ecommerce/shopizer 
 
-Test : http://localhost:8080/shop
-Admin : Username/Pass = admin/password
-http://localhost:8080/admin/logon.html
+To build the application:
+-------------------	
+From the command line with Maven installed:
+
+	$ cd shopizer
+	$ mvn clean install
+	
+
+Run the application from Tomcat 
+-------------------
+copy sm-shop/target/ROOT.war to tomcat or any other application server deployment dir
+
+Increase heap space to 1024 m or at least 512 m
+
+### Heap space configuration in Tomcat:
+
+
+If you are using Tomcat, edit catalina.bat for windows users or catalina.sh for linux / Mac users
+
+	in Windows
+	set JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=256m" 
+	
+	in Linux / Mac
+	export JAVA_OPTS="-Xms1024m -Xmx1024m -XX:MaxPermSize=256m" 
+
+Run the application from Spring boot 
+-------------------
+
+       $ cd sm-shop
+       $ mvn spring-boot:run
+
+Run the application from Spring boot in eclipse
+-------------------
+
+Right click on com.salesmanager.shop.application.ShopApplication
+
+run as Java Application
+
+### Access the application:
+-------------------
+
+Access the deployed web application at: http://localhost:8080/
+
+Acces the admin section at: http://localhost:8080/admin
+
+#####username : admin
+#####password : password
+
+The instructions above will let you run the application with default settings and configurations.
+Please read the instructions on how to connect to MySQL, configure an email server and configure other subsystems
+
+
+### Documentation:
+-------------------
+
+Documentation available from the wiki <http://shopizer-ecommerce.github.io/shopizer/#>
+
+More information is available on shopizer web site here <http://www.shopizer.com>
+
+### Participation:
+-------------------
+
+We have created a new channel for discussing requirements and implementation.
+If you have interest in giving feedback or for participating to Shopizer project in any way
+Feel to use the contact form <http://www.shopizer.com/contact.html> and share your email address
+so we can send an invite to our new Slack channel
+
+ChatOps <https://shopizer.slack.com>
+
+
